--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
             </img>
        </section>
 
+       <div class="greeting">
+        <p>Sigue viendo...</p>
+       </div>
+
     </main>
 
     <section class="trabajos">
@@ -93,13 +97,7 @@
              <ul class="menu">
                 <a href="#" class="facebook"><i class="fa-brands fa-facebook"></i></a>
 
-            <a href="#" class="whatsapp"><i class="fa-brands fa-square-whatsapp"></i></a>
-
-            <a href="#" class="twitter"><i class="fa-brands fa-square-x-twitter"></i></a>
-
-            <a href="#"class="tiktok"><i class="fa-brands fa-tiktok"></i></a>
-                
-            
+                <a href="#" class="whatsapp"><i class="fa-brands fa-square-whatsapp"></i></a>
              </ul>
             </h3>
         </div>
